--- a/info/todo.txt
+++ b/info/todo.txt
@@ -3,4 +3,7 @@ Things to do:
     - compare spatial indexing using fiona and rtree to mongodb.
     - compare using geoJSON for county information to topoJSON (with converting to geoJSON on the fly)
     - document the database collections
+    - construct or find shp file for Neil Freeman's equal population map.
+      http://fakeisthenewreal.org/reform/
+      http://mentalfloss.com/sites/default/files/map--50.jpg
 
